marketplace/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
  labels:
    io.kompose.service: marketplace
  name: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: marketplace
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
      labels:
        io.kompose.service: marketplace
    spec:
      containers:
        - command:
            - /root/whitelabel-marketplace/entrypoint.sh
          image: bermudea/marketplace
          name: marketplace
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /root/whitelabel-marketplace/entrypoint.sh
              name: marketplace-cm0
              subPath: entrypoint.sh
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
            name: marketplace-cm0
          name: marketplace-cm0
