marketplace/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
  labels:
    io.kompose.service: marketplace
  name: marketplace
spec:
  selector:
    io.kompose.service: marketplace
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
